--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Angular/pages/doctors/doctors.html
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Angular/pages/doctors/doctors.html
@@ -1,11 +1,10 @@
 ﻿<div class="row">
     <div class="col-md-6">
-        <select-picker-panel doctors="vm.selectDoctors"></select-picker-panel>
-    </div>
-
-    <div class="col-md-6">
-        <div class=".panel-heading">
-            <h2 class="panel-title">{{ vm.selectDoctors }}</h2>
+        <select-picker-panel doctors="vm.doctorsList"></select-picker-panel>
+        
+        <div ng-repeat="doctor in vm.doctorsList">
+            <p>{{doctor}}</p>
         </div>
+
     </div>
 </div>
