--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Angular/pages/bookingVisit/singleVisit/singleVisit.html
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Angular/pages/bookingVisit/singleVisit/singleVisit.html
@@ -1,4 +1,18 @@
-﻿<div class="panel-primary">
-    <div class="panel-heading">{{vm.visit.startDate}}</div>
-    <div class="panel-body">{{vm.visit.confirmation}}</div>
+﻿
+
+<div class="panel panel-primary contextual-example-panel bootstrap-pane">
+    <div class="col-md-8 col-xs-12">
+        <div class="panel-heading">{{vm.visit.startDate}}</div>
+        <div class="panel-body">
+            <div class="row">DoctorId: {{vm.visit.doctorId}}</div>
+            <div class="row">Duration: {{vm.visit.duration}}</div>
+            <div class="row">Confirmation: {{vm.visit.confirmation}}</div>
+        </div>
+    </div>
+    <div ng-if="vm.visit.confirmation === false" class="col-md-4 col-xs-12">
+        <div></div>
+        <button ng-click="vm.confirmVisit()" ng-hide="vm.visit.confirmation" type="button" class="btn btn-danger btn-lg" style="margin-top: 23%;">
+            Confirmed
+        </button>
+    </div>
 </div>
