--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Angular/pages/bookingVisit/bookingvisit.html
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Angular/pages/bookingVisit/bookingvisit.html
@@ -1,4 +1,11 @@
-﻿<div class="row" style="color: white; text-align: center;">
+﻿
+<div ng-show="vm.userRole == 'Admin'">
+    <div class="alert bg-danger col-md-6">
+        <h3>Lack of visit for admin account type.</h3> 
+    </div>
+</div>
+
+<div ng-show="vm.userRole == 'Doctor' || vm.userRole == 'Patient'" class="row" style="color: white; text-align: center;">
     <div class="col-md-4">
         <div class="panel-blur">
             <div class="panel-heading">My visit</div>
@@ -31,9 +38,11 @@
             </div>
         </div>
     </div>
+    
+    <!-- Debug -->
+    <div class="well well-lg">
+        {{ vm.initData.data.Visits }}
+    </div>
 </div>
 
 
-<div class="well well-lg">
-    {{ vm.initData.data.Visits }}
-</div>
