--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Angular/pages/bookingVisit/bookingvisit.html
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Angular/pages/bookingVisit/bookingvisit.html
@@ -1,6 +1,6 @@
 ﻿
 <div ng-show="vm.userRole == 'Admin'">
-    <div class="alert bg-danger col-md-6">
+    <div class="alert bg-info col-md-6">
         <h3>Lack of visit for admin account type.</h3> 
     </div>
 </div>
