--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Angular/pages/bookingVisit/bookingvisit.html
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Angular/pages/bookingVisit/bookingvisit.html
@@ -5,7 +5,7 @@
     </div>
 </div>
 
-<div ng-show="vm.userRole == 'Doctor' || vm.userRole == 'Patient'" class="row" style="color: white; text-align: center;">
+<div ng-show="vm.userRole == 'Doctor' || vm.userRole == 'Patient'" class="row" style="text-align: center;">
     <div class="col-md-4">
         <div class="panel-blur">
             <div class="panel-heading">My visit</div>
@@ -37,11 +37,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    
-    <!-- Debug -->
-    <div class="well well-lg">
-        {{ vm.initData.data.Visits }}
     </div>
 </div>
 
